--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-files-normal/mac_hostnames
-files-normal/secrets
-files-normal/etc/dropbear/authorized_keys
+files/mac_hostnames
+files/secrets
+files/etc/dropbear/authorized_keys
