- Moved a lot of the mydns stuff into it;s proper relative folder - Also added a logrotate - As it now logs everything to the usb drive conected to the router - So you can use the findYoutubeAds script to see which advertising domains you can block to lessen youtube ads - Also made it so you don;t need to move commonfunctions or commonfunctions_sectrets - just leave them in the main folder - pgrep alias has been renamed to psgrep (as pgrep is actualy a thing already)

--- a/opt/etc/dnsmasq.conf
+++ b/opt/etc/dnsmasq.conf
@@ -686,6 +686,10 @@ enable-ra
 resolv-file=/tmp/resolv.conf
 no-dhcp-interface=lo
 dhcp-range=192.168.32.2,192.168.32.250,255.255.255.0,12h
+log-facility=/mnt/sda1/logs/dnsmasq/dnsmasq.log
+log-queries
+log-dhcp
+
 
 #static dns hostnames and ips
 dhcp-host=A8:9C:ED:71:D6:97,Jim-MiPhone,192.168.32.27
