Added a note in /opt/etc/dnsmasq.conf on how to easily grab your DHCP reservation and import them into dnsmasq in a few seconds.

--- a/opt/etc/dnsmasq.conf
+++ b/opt/etc/dnsmasq.conf
@@ -692,6 +692,16 @@ log-dhcp
 
 
 #static dns hostnames and ips
+#To easily add your old DHCP reservatiosn to this file in a few seconds do this on the command line:
+# nvram show | grep -Ei "^reservation[0-9]+" >> /opt/etc/dnsmasq.conf
+# then open up the file in nano: nano /opt/etc/dnsmasq.conf
+# Next we'll use two different regex search and replaces to convert the nvram format into dnsmasq format
+#Search and replace 1:
+# search (ctrl+w) regex (esc+r): ^reservation[0-9]+
+# replace (ctrl+r): dhcp-host
+#Search and replace 2 (replace the ip address with the one for your network, i.e. instead of 32 use 1 if your network is 192.168.1.0-255):
+# search (ctrl+w) regex (esc+r): (192.168.32.[0-9]+)\ ([A-F|0-9][A-F|0-9]:[A-F|0-9][A-F|0-9]:[A-F|0-9][A-F|0-9]:[A-F|0-9][A-F|0-9]:[A-F|0-9][A-F|0-9]:[A-F|0-9][A-F|0-9])\ (.*)
+# replace (ctrl+r): \2,\3,\1
 dhcp-host=A8:9C:ED:71:D6:97,Jim-MiPhone,192.168.32.27
 dhcp-host=BC:EC:5D:22:97:32,Jims-iPad,192.168.32.28
 dhcp-host=EC:41:18:EB:94:F0,OpenWRT1,192.168.32.3
