- Updated buildscript with new -s|--stable version.  This will show a menu with a list of all available stable git tags of OpenWRT. The script will then build that rather than the latest git. - Updated .config files for compatiablilty with OpenWRT v21 - Updated config files to support plugging a printer or thumb drive into the USB 3.0 socket and the most common file system are now supported - Updated config files to better support fast roaming, and 80211v,k and r - Added umdns and config, a new requirement of DAWN - Updated config files to allow sending of files over the uart serial connection if required - Added a file with instructions on how to debrick the router easily, and possible ways of sending files over uart serial connections (in LibreOffice Write odt format) - probably other stuff I've forgotten

--- a/extras.config
+++ b/extras.config
@@ -6,6 +6,7 @@ CONFIG_INCLUDE_CONFIG=y
 CONFIG_IPK_FILES_CHECKSUMS=y
 CONFIG_AUTOREMOVE=y
 CONFIG_SRC_TREE_OVERRIDE=y
+CONFIG_EXPERIMENTAL=y
 
 CONFIG_LUCI_LANG_en=y
 
@@ -186,3 +187,68 @@ CONFIG_ZABBIX_MYSQL=y
 # CONFIG_ZABBIX_NOSSL is not set
 CONFIG_ZABBIX_OPENSSL=y
 # CONFIG_ZABBIX_POSTGRESQL is not set
+CONFIG_PACKAGE_block-mount=y
+CONFIG_PACKAGE_kmod-scsi-core=y
+CONFIG_PACKAGE_kmod-fs-autofs4=y
+CONFIG_PACKAGE_kmod-fs-cifs=y
+CONFIG_PACKAGE_kmod-fs-configfs=y
+CONFIG_PACKAGE_kmod-fs-exfat=y
+CONFIG_PACKAGE_kmod-fs-exportfs=y
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-fscache=y
+CONFIG_PACKAGE_kmod-fs-hfs=y
+CONFIG_PACKAGE_kmod-fs-hfsplus=y
+CONFIG_PACKAGE_kmod-fs-isofs=y
+CONFIG_PACKAGE_kmod-fs-jfs=y
+#CONFIG_PACKAGE_kmod-fs-ksmbd=y
+CONFIG_PACKAGE_kmod-fs-msdos=y
+CONFIG_PACKAGE_kmod-fs-nfs=y
+CONFIG_PACKAGE_kmod-fs-nfs-common=y
+CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=y
+CONFIG_PACKAGE_kmod-fs-nfs-v4=y
+CONFIG_PACKAGE_kmod-fs-nfsd=y
+CONFIG_PACKAGE_kmod-fs-ntfs=y
+CONFIG_PACKAGE_kmod-fs-squashfs=y
+CONFIG_PACKAGE_kmod-fs-udf=y
+CONFIG_PACKAGE_kmod-fs-vfat=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-ohci-pci=y
+CONFIG_PACKAGE_kmod-usb-printer=y
+CONFIG_PACKAGE_kmod-usb-serial=y
+CONFIG_PACKAGE_kmod-usb-serial-ch341=y
+CONFIG_PACKAGE_kmod-usb-serial-cp210x=y
+CONFIG_PACKAGE_kmod-usb-serial-dmx_usb_module=y
+CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
+CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
+CONFIG_PACKAGE_kmod-usb-serial-wwan=y
+CONFIG_PACKAGE_kmod-usb-storage=y
+CONFIG_PACKAGE_kmod-usb-storage-extras=y
+CONFIG_PACKAGE_kmod-usb-storage-uas=y
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb2-pci=y
+CONFIG_PACKAGE_kmod-usbip=y
+CONFIG_PACKAGE_kmod-usbip-client=y
+CONFIG_PACKAGE_kmod-usbip-server=y
+CONFIG_PACKAGE_coreutils-base64=y
+CONFIG_PACKAGE_coreutils-basename=y
+CONFIG_PACKAGE_coreutils-cat=y
+CONFIG_PACKAGE_coreutils-cp=y
+CONFIG_PACKAGE_coreutils-date=y
+CONFIG_PACKAGE_coreutils-df=y
+CONFIG_PACKAGE_coreutils-du=y
+CONFIG_PACKAGE_coreutils-echo=y
+CONFIG_PACKAGE_coreutils-ln=y
+CONFIG_PACKAGE_coreutils-ls=y
+CONFIG_PACKAGE_coreutils-mv=y
+CONFIG_PACKAGE_coreutils-readlink=y
+CONFIG_PACKAGE_coreutils-rm=y
+CONFIG_PACKAGE_coreutils-rmdir=y
+CONFIG_PACKAGE_coreutils-seq=y
+CONFIG_PACKAGE_coreutils-tail=y
+CONFIG_PACKAGE_coreutils-tee=y
+CONFIG_PACKAGE_gkermit=y
+CONFIG_PACKAGE_lrzsz=y
+CONFIG_PACKAGE_umdns=y
+
