--- a/xrp3.config
+++ b/xrp3.config
@@ -1,11 +1,12 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_mir3p=""
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mir3g=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mir3p=y
-CONFIG_VERSIONOPT=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-3-pro=y
+#CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_mir3p=""
+#CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mir3g=y
+#CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mir3p=y
+#CONFIG_VERSIONOPT=y
 CONFIG_VERSION_BUG_URL=""
-CONFIG_VERSION_CODE=""
+#CONFIG_VERSION_CODE=""
 CONFIG_VERSION_CODE_FILENAMES=y
 CONFIG_VERSION_DIST="OpenWrt"
 CONFIG_VERSION_FILENAMES=y
@@ -13,7 +14,7 @@ CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_HWREV=""
 CONFIG_VERSION_MANUFACTURER="Xiaomi"
 CONFIG_VERSION_MANUFACTURER_URL=""
-CONFIG_VERSION_NUMBER=""
+#CONFIG_VERSION_NUMBER=""
 CONFIG_VERSION_PRODUCT="Mi Router 3 Pro"
 CONFIG_VERSION_REPO="http://downloads.openwrt.org/snapshots"
-CONFIG_VERSION_SUPPORT_URL=""
+#CONFIG_VERSION_SUPPORT_URL=""
