Updaed to 1.2 - NOTE files/etc/config/{network,wireless} are NOT inclided as they contain sensitive information

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 files/mac_hostnames
 files/secrets
 files/etc/dropbear/authorized_keys
+files/root/.ssh/authorized_keys
 gitTag
 config.buildinfo
 mnt/
