--- a/xrp3.config
+++ b/xrp3.config
@@ -1,15 +1,16 @@
 CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
+CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mir3p=y #v 19.0.7 renamed it for some reason, it was then reverted for future versions
 CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mi-router-3-pro=y
 #CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_xiaomi_mir3p=""
 #CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mir3g=y
 #CONFIG_TARGET_ramips_mt7621_DEVICE_xiaomi_mir3p=y
 #CONFIG_VERSIONOPT=y
-CONFIG_VERSION_BUG_URL=""
+#CONFIG_VERSION_BUG_URL=""
 #CONFIG_VERSION_CODE=""
-CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_DIST="OpenWrt"
-CONFIG_VERSION_FILENAMES=y
+#CONFIG_VERSION_CODE_FILENAMES=y
+#CONFIG_VERSION_DIST="OpenWrt"
+#CONFIG_VERSION_FILENAMES=y
 CONFIG_VERSION_HOME_URL=""
 CONFIG_VERSION_HWREV=""
 CONFIG_VERSION_MANUFACTURER="Xiaomi"
@@ -18,3 +19,12 @@ CONFIG_VERSION_MANUFACTURER_URL=""
 CONFIG_VERSION_PRODUCT="Mi Router 3 Pro"
 CONFIG_VERSION_REPO="http://downloads.openwrt.org/snapshots"
 #CONFIG_VERSION_SUPPORT_URL=""
+
+#CONFIG_HAS_SUBTARGETS=y
+#CONFIG_HAS_DEVICES=y
+#CONFIG_TARGET_BOARD="ramips"
+#CONFIG_TARGET_SUBTARGET="mt7621"
+#CONFIG_TARGET_PROFILE="DEVICE_xiaomi_mir3p"
+#CONFIG_TARGET_ARCH_PACKAGES="mipsel_24kc"
+#CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe -mno-branch-likely -mips32r2 -mtune=24kc"
+#CONFIG_CPU_TYPE="24kc"
