--- a/extras.config
+++ b/extras.config
@@ -1,31 +1,32 @@
-CONFIG_BUILD_NLS=y
+#CONFIG_BUILD_NLS=y
 CONFIG_BUILD_PATENTED=y
 CONFIG_COLLECT_KERNEL_DEBUG=y
-CONFIG_IB_STANDALONE=y
+#CONFIG_IB_STANDALONE=y
 CONFIG_INCLUDE_CONFIG=y
 CONFIG_IPK_FILES_CHECKSUMS=y
-CONFIG_AUTOREMOVE=y
+#CONFIG_AUTOREMOVE=y
+CONFIG_DEVEL=y
 CONFIG_SRC_TREE_OVERRIDE=y
 CONFIG_EXPERIMENTAL=y
 
 CONFIG_LUCI_LANG_en=y
 
-CONFIG_AIRCRACK_NG_OPENSSL=y
-CONFIG_AIRCRACK_NG_OPTIMIZE_SPEED=y
-CONFIG_PACKAGE_acme=y
-CONFIG_PACKAGE_aircrack-ng=y
-CONFIG_PACKAGE_airmon-ng=y
-CONFIG_PACKAGE_adblock=y
-CONFIG_PACKAGE_badblocks=y
+#CONFIG_AIRCRACK_NG_OPENSSL=y
+#CONFIG_AIRCRACK_NG_OPTIMIZE_SPEED=y
+#CONFIG_PACKAGE_acme=y
+#CONFIG_PACKAGE_aircrack-ng=y
+#CONFIG_PACKAGE_airmon-ng=y
+#CONFIG_PACKAGE_adblock=y
+#CONFIG_PACKAGE_badblocks=y
 CONFIG_PACKAGE_bash=y
-CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_byobu=y
-CONFIG_PACKAGE_byobu-utils=y
+#CONFIG_PACKAGE_blkid=y
+##******BREAKS BUILD #CONFIG_PACKAGE_byobu=y
+##******BREAKS BUILD #CONFIG_PACKAGE_byobu-utils=y
 CONFIG_PACKAGE_bzip2=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_chrony=y
-CONFIG_PACKAGE_clamav=y
+#CONFIG_PACKAGE_clamav=y
 CONFIG_PACKAGE_collectd=y
 CONFIG_PACKAGE_collectd-mod-cpu=y
 CONFIG_PACKAGE_collectd-mod-interface=y
@@ -39,39 +40,39 @@ CONFIG_PACKAGE_coreutils-sort=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_dawn=y
 CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuMathTeXGyre=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-Bold=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-BoldOblique=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-ExtraLight=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-Oblique=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed-Bold=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed-BoldOblique=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed-Oblique=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono-Bold=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono-BoldOblique=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono-Oblique=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif-Bold=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif-BoldItalic=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif-Italic=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-Bold=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-BoldItalic=y
-CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-Italic=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuMathTeXGyre=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-Bold=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-BoldOblique=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-ExtraLight=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSans-Oblique=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed-Bold=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed-BoldOblique=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansCondensed-Oblique=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono-Bold=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono-BoldOblique=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSansMono-Oblique=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif-Bold=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif-BoldItalic=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerif-Italic=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-Bold=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-BoldItalic=y
+#CONFIG_PACKAGE_dejavu-fonts-ttf-DejaVuSerifCondensed-Italic=y
 CONFIG_PACKAGE_dmesg=y
 CONFIG_PACKAGE_dnscrypt-proxy=y
 CONFIG_PACKAGE_dnscrypt-proxy-resolvers=y
-CONFIG_PACKAGE_dosfstools=y
-CONFIG_PACKAGE_dropbearconvert=y
+#CONFIG_PACKAGE_dosfstools=y
+CONFIG_PACKAGE_dropbearconvert=n
 CONFIG_PACKAGE_e2freefrag=y
 CONFIG_PACKAGE_e2fsprogs=y
-CONFIG_PACKAGE_exfat-fsck=y
-CONFIG_PACKAGE_exfat-mkfs=y
-CONFIG_PACKAGE_f2fs-tools=y
-CONFIG_PACKAGE_f2fsck=y
+#CONFIG_PACKAGE_exfat-fsck=y
+#CONFIG_PACKAGE_exfat-mkfs=y
+#CONFIG_PACKAGE_f2fs-tools=y
+#CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_file=y
 CONFIG_PACKAGE_filefrag=y
@@ -79,31 +80,31 @@ CONFIG_PACKAGE_findutils=y
 CONFIG_PACKAGE_findutils-find=y
 CONFIG_PACKAGE_findutils-locate=y
 CONFIG_PACKAGE_findutils-xargs=y
-CONFIG_PACKAGE_fixparts=y
-CONFIG_PACKAGE_flashrom=y
+#CONFIG_PACKAGE_fixparts=y
+#CONFIG_PACKAGE_flashrom=y
 CONFIG_PACKAGE_gawk=y
-CONFIG_PACKAGE_gdisk=y
+#CONFIG_PACKAGE_gdisk=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_gzip=y
-CONFIG_PACKAGE_hdparm=y
+#CONFIG_PACKAGE_hdparm=y
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_https-dns-proxy=y
 CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
 CONFIG_PACKAGE_iptables-mod-ipopt=y
-# CONFIG_PACKAGE_iw is not set
+## CONFIG_PACKAGE_iw is not set
 CONFIG_PACKAGE_iw-full=y
 CONFIG_PACKAGE_lldpd=y
 CONFIG_PACKAGE_lm-sensors=y
 CONFIG_PACKAGE_lm-sensors-detect=y
 CONFIG_PACKAGE_logrotate=y
-CONFIG_PACKAGE_lsblk=y
+#CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lsof=y
-CONFIG_PACKAGE_luci-app-acl=y
-CONFIG_PACKAGE_luci-app-acme=y
-CONFIG_PACKAGE_luci-app-adblock=y
-CONFIG_PACKAGE_luci-app-clamav=y
+#CONFIG_PACKAGE_luci-app-acl=y
+#CONFIG_PACKAGE_luci-app-acme=y
+#CONFIG_PACKAGE_luci-app-adblock=y
+#CONFIG_PACKAGE_luci-app-clamav=y
 CONFIG_PACKAGE_luci-app-commands=y
 CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_PACKAGE_luci-app-ddns=y
@@ -114,123 +115,122 @@ CONFIG_PACKAGE_luci-app-ledtrig-rssi=y
 CONFIG_PACKAGE_luci-app-ledtrig-switch=y
 CONFIG_PACKAGE_luci-app-ledtrig-usbport=y
 CONFIG_PACKAGE_luci-app-ntpc=y
-CONFIG_PACKAGE_luci-app-openvpn=y
+#CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-qos=y
-CONFIG_PACKAGE_luci-app-shairplay=y
+#CONFIG_PACKAGE_luci-app-shairplay=y
 CONFIG_PACKAGE_luci-app-statistics=y
 CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-watchcat=y
-CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-compat=y
+CONFIG_PACKAGE_luci-mod-dashboard=y
 CONFIG_PACKAGE_luci-mod-failsafe=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-mod-rpc=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_luci-theme-openwrt-2020=y
 CONFIG_PACKAGE_lz4=y
-CONFIG_PACKAGE_mariadb-common=y
+#CONFIG_PACKAGE_mariadb-common=y
 CONFIG_PACKAGE_miniupnpd=y
-CONFIG_PACKAGE_mkf2fs=y
+#CONFIG_PACKAGE_mkf2fs=y
 CONFIG_PACKAGE_moreutils=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nand-utils=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_ntfs-3g=y
-CONFIG_PACKAGE_ntfs-3g-utils=y
+#CONFIG_PACKAGE_ntfs-3g=y
+#CONFIG_PACKAGE_ntfs-3g-utils=y
 CONFIG_PACKAGE_ntpclient=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_pciutils=y
-CONFIG_PACKAGE_pv=y
+#CONFIG_PACKAGE_pv=y
 CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_resize2fs=y
 CONFIG_PACKAGE_rssileds=y
 CONFIG_PACKAGE_rsync=y
 CONFIG_PACKAGE_rsyncd=y
 CONFIG_PACKAGE_sed=y
-CONFIG_PACKAGE_shairplay=y
-CONFIG_PACKAGE_socat=y
+#CONFIG_PACKAGE_shairplay=y
+#CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_squashfs-tools-mksquashfs=y
 CONFIG_PACKAGE_squashfs-tools-unsquashfs=y
 CONFIG_PACKAGE_sshpass=y
-CONFIG_PACKAGE_sudo=y
-CONFIG_PACKAGE_swap-utils=y
+#CONFIG_PACKAGE_sudo=y
+#CONFIG_PACKAGE_swap-utils=y
 CONFIG_PACKAGE_sysfsutils=y
 CONFIG_PACKAGE_tar=y
 CONFIG_PACKAGE_tc=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tree=y
-CONFIG_PACKAGE_tune2fs=y
+#CONFIG_PACKAGE_tune2fs=y
 CONFIG_PACKAGE_ucert-full=y
 CONFIG_PACKAGE_unrar=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_watchcat=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_whereis=y
-CONFIG_PACKAGE_wipefs=y
-CONFIG_PACKAGE_wireguard-tools=y
+#CONFIG_PACKAGE_wipefs=y
 CONFIG_PACKAGE_wireless-tools=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
-CONFIG_PACKAGE_zabbix-agentd=y
-CONFIG_PACKAGE_zabbix-extra-mac80211=y
-CONFIG_PACKAGE_zabbix-extra-network=y
-CONFIG_PACKAGE_zabbix-extra-wifi=y
-CONFIG_PACKAGE_zabbix-get=y
-CONFIG_PACKAGE_zabbix-proxy=y
-CONFIG_PACKAGE_zabbix-sender=y
-CONFIG_PACKAGE_zabbix-server=y
-CONFIG_PACKAGE_zabbix-server-frontend=y
+#CONFIG_PACKAGE_zabbix-agentd=y
+#CONFIG_PACKAGE_zabbix-extra-mac80211=y
+#CONFIG_PACKAGE_zabbix-extra-network=y
+#CONFIG_PACKAGE_zabbix-extra-wifi=y
+#CONFIG_PACKAGE_zabbix-get=y
+#CONFIG_PACKAGE_zabbix-proxy=y
+#CONFIG_PACKAGE_zabbix-sender=y
+#CONFIG_PACKAGE_zabbix-server=y
+#CONFIG_PACKAGE_zabbix-server-frontend=y
 CONFIG_PACKAGE_zlib=y
 CONFIG_PACKAGE_zoneinfo-core=y
 CONFIG_PACKAGE_zoneinfo-europe=y
 CONFIG_PACKAGE_openwrt-keyring=y
-CONFIG_ZABBIX_MYSQL=y
-# CONFIG_ZABBIX_NOSSL is not set
-CONFIG_ZABBIX_OPENSSL=y
-# CONFIG_ZABBIX_POSTGRESQL is not set
+#CONFIG_ZABBIX_MYSQL=y
+## CONFIG_ZABBIX_NOSSL is not set
+#CONFIG_ZABBIX_OPENSSL=y
+## CONFIG_ZABBIX_POSTGRESQL is not set
 CONFIG_PACKAGE_block-mount=y
 CONFIG_PACKAGE_kmod-scsi-core=y
-CONFIG_PACKAGE_kmod-fs-autofs4=y
-CONFIG_PACKAGE_kmod-fs-cifs=y
+#CONFIG_PACKAGE_kmod-fs-autofs4=y
+#CONFIG_PACKAGE_kmod-fs-cifs=y
 CONFIG_PACKAGE_kmod-fs-configfs=y
-CONFIG_PACKAGE_kmod-fs-exfat=y
-CONFIG_PACKAGE_kmod-fs-exportfs=y
+#CONFIG_PACKAGE_kmod-fs-exfat=y
+#CONFIG_PACKAGE_kmod-fs-exportfs=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-fscache=y
-CONFIG_PACKAGE_kmod-fs-hfs=y
-CONFIG_PACKAGE_kmod-fs-hfsplus=y
+#CONFIG_PACKAGE_kmod-fs-hfs=y
+#CONFIG_PACKAGE_kmod-fs-hfsplus=y
 CONFIG_PACKAGE_kmod-fs-isofs=y
 CONFIG_PACKAGE_kmod-fs-jfs=y
 #CONFIG_PACKAGE_kmod-fs-ksmbd=y
-CONFIG_PACKAGE_kmod-fs-msdos=y
-CONFIG_PACKAGE_kmod-fs-nfs=y
-CONFIG_PACKAGE_kmod-fs-nfs-common=y
-CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=y
-CONFIG_PACKAGE_kmod-fs-nfs-v4=y
-CONFIG_PACKAGE_kmod-fs-nfsd=y
-CONFIG_PACKAGE_kmod-fs-ntfs=y
+#CONFIG_PACKAGE_kmod-fs-msdos=y
+#CONFIG_PACKAGE_kmod-fs-nfs=y
+#CONFIG_PACKAGE_kmod-fs-nfs-common=y
+#CONFIG_PACKAGE_kmod-fs-nfs-common-rpcsec=y
+#CONFIG_PACKAGE_kmod-fs-nfs-v4=y
+#CONFIG_PACKAGE_kmod-fs-nfsd=y
+#CONFIG_PACKAGE_kmod-fs-ntfs=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
-CONFIG_PACKAGE_kmod-fs-udf=y
-CONFIG_PACKAGE_kmod-fs-vfat=y
+#CONFIG_PACKAGE_kmod-fs-udf=y
+#CONFIG_PACKAGE_kmod-fs-vfat=y
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
-CONFIG_PACKAGE_kmod-usb-printer=y
+#CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-serial=y
-CONFIG_PACKAGE_kmod-usb-serial-ch341=y
-CONFIG_PACKAGE_kmod-usb-serial-cp210x=y
-CONFIG_PACKAGE_kmod-usb-serial-dmx_usb_module=y
-CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
-CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
-CONFIG_PACKAGE_kmod-usb-serial-wwan=y
+#CONFIG_PACKAGE_kmod-usb-serial-ch341=y
+#CONFIG_PACKAGE_kmod-usb-serial-cp210x=y
+#CONFIG_PACKAGE_kmod-usb-serial-dmx_usb_module=y
+#CONFIG_PACKAGE_kmod-usb-serial-ftdi=y
+#CONFIG_PACKAGE_kmod-usb-serial-qualcomm=y
+#CONFIG_PACKAGE_kmod-usb-serial-wwan=y
 CONFIG_PACKAGE_kmod-usb-storage=y
 CONFIG_PACKAGE_kmod-usb-storage-extras=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
 CONFIG_PACKAGE_kmod-usb-uhci=y
 CONFIG_PACKAGE_kmod-usb2=y
 CONFIG_PACKAGE_kmod-usb2-pci=y
-CONFIG_PACKAGE_kmod-usbip=y
-CONFIG_PACKAGE_kmod-usbip-client=y
-CONFIG_PACKAGE_kmod-usbip-server=y
+#CONFIG_PACKAGE_kmod-usbip=y
+#CONFIG_PACKAGE_kmod-usbip-client=y
+#CONFIG_PACKAGE_kmod-usbip-server=y
 CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-basename=y
 CONFIG_PACKAGE_coreutils-cat=y
@@ -248,7 +248,45 @@ CONFIG_PACKAGE_coreutils-rmdir=y
 CONFIG_PACKAGE_coreutils-seq=y
 CONFIG_PACKAGE_coreutils-tail=y
 CONFIG_PACKAGE_coreutils-tee=y
-CONFIG_PACKAGE_gkermit=y
-CONFIG_PACKAGE_lrzsz=y
+#CONFIG_PACKAGE_gkermit=y
+#CONFIG_PACKAGE_lrzsz=y
 CONFIG_PACKAGE_umdns=y
+
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-proto-relay=y
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_wireguard-tools=y
+
+CONFIG_PACKAGE_ddns-scripts-freedns=y
+CONFIG_PACKAGE_ddns-scripts-gandi=y
+
+CONFIG_PACKAGE_dns-over-https=y
+CONFIG_DNSCRYPT_ENABLE_PLUGINS=y
+
+CONFIG_PACKAGE_ncat-full=y
+CONFIG_PACKAGE_nmap-full=y
+
+CONFIG_PACKAGE_adguardhome=y
+
+CONFIG_PACKAGE_zstd=y
+CONFIG_ZSTD_OPTIMIZE_O3=y
+CONFIG_SQUASHFS_TOOLS_ZSTD_SUPPORT=y
+CONFIG_SQUASHFS_TOOLS_XZ_SUPPORT=y
+CONFIG_PACKAGE_openssh-keygen=y
+CONFIG_PACKAGE_openssh-server=y
+CONFIG_PACKAGE_openssh-sftp-avahi-service=y
+CONFIG_PACKAGE_openssh-sftp-server=y
+CONFIG_PACKAGE_ddns-scripts-services=y
+CONFIG_PACKAGE_ddns-scripts-utils=y
+CONFIG_PACKAGE_avahi-autoipd=y
+CONFIG_PACKAGE_avahi-daemon-service-http=y
+CONFIG_PACKAGE_avahi-daemon-service-ssh=y
+CONFIG_PACKAGE_avahi-dbus-daemon=y
+CONFIG_PACKAGE_avahi-utils=y
+CONFIG_PACKAGE_TAR_BZIP2=y
+CONFIG_PACKAGE_TAR_GZIP=y
+CONFIG_PACKAGE_TAR_XZ=y
+CONFIG_PACKAGE_TAR_ZSTD=y
+CONFIG_OPENSSH_LIBFIDO2=y
+CONFIG_LIBSSH2_OPENSSL=y
 
