--- a/extras.config
+++ b/extras.config
@@ -289,4 +289,9 @@ CONFIG_PACKAGE_TAR_XZ=y
 CONFIG_PACKAGE_TAR_ZSTD=y
 CONFIG_OPENSSH_LIBFIDO2=y
 CONFIG_LIBSSH2_OPENSSL=y
-
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_luci-app-natmap=y
+CONFIG_PACKAGE_luci-app-nft-qos=y
+CONFIG_PACKAGE_dropbear=n
+CONFIG_PACKAGE_dropbearconvert=n
